swagger docs updated
