# docs/swagger.yaml
@@ -2585,7 +2585,520 @@ paths:
         "401":
           $ref: "#/components/responses/UnauthorizedError" 
 
+  /proposal:
+    post:
+      tags:
+        - "proposal"
+      summary: Post a proposal aka place a bid
+      operationId: post a proposal aka bid
+      description:  Restricted to users.
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                job_id:
+                  type: integer
+                  example: 1
+              required:
+                - job_id
+            
+      responses:
+        '200':
+          description: proposal aka bid  was correctly inserted 
+          content:
+             application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+                  job_id:
+                    type: integer
+                    example: 1
+                  freelancer_id:
+                    type: integer
+                    example: 1  
+                  client_comment:
+                    type: string
+                    example: ""
+                  freelancer_comment:
+                    type: string
+                    example: ""
+                  freelancer_rating:
+                    type: integer
+                    example: 1
+                  client_rating:
+                    type: number
+                    example: 1
+                  current_proposal_status_id:
+                    type: number
+                    example: 1
+                  created_at:
+                    type: string
+                    example: "2020-05-08T03:11:21.553Z"  
+                  updated_at:
+                    type: string
+                    example: "2020-05-08T03:11:21.553Z" 
+                     
+        "400":
+          $ref: "#/components/responses/BadRequestError"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+    
+  /proposal/freelancerProposals:
+    get:
+      tags:
+        - "proposal"
+      parameters:
+        - in: query
+          name: queryParams
+          schema:
+            type: object
+            properties:
+              nextPage:
+                type: string
+              limit:
+                type: integer
+                example: 30
+              proposalStatus:
+                type: integer
+                example: 1
+          style: form
+          explode: true
+      summary: Get all proposals aka bids for a freelancer
+      description: Fetch all freelancer bids, with multiple combinations
+      operationId: getproposalsByFreelancer
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: An object containing the results and the pagInfo obj for cursor pagination for the bids
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  results:
+                    type: array
+                    items:
+                       type: object
+                       properties:
+                        id:
+                          type: integer
+                          example: 1
+                        job_id:
+                          type: integer
+                          example: 1
+                        freelancer_id:
+                          type: integer
+                          example: 1  
+                        client_comment:
+                          type: string
+                          example: ""
+                        freelancer_comment:
+                          type: string
+                          example: ""
+                        freelancer_rating:
+                          type: integer
+                          example: 1
+                        client_rating:
+                          type: number
+                          example: 1
+                        current_proposal_status_id:
+                          type: number
+                          example: 1
+                        created_at:
+                          type: string
+                          example: "2020-05-08T03:11:21.553Z"  
+                        updated_at:
+                          type: string
+                          example: "2020-05-08T03:11:21.553Z"  
+                  pageInfo:
+                    type: object
+                    properties:
+                      total:
+                        type: integer
+                        example: 30
+                      remaining:
+                        type: integer
+                        example: 20
+                      hasMore:
+                        type: boolean
+                        example: true
+                      hasPrevious:
+                        type: boolean
+                        example: true
+                      hasNext:
+                        type: boolean
+                        example: true
+                      next: 
+                        type: string
+                        example: "KGRhdGUpMjAyMS0wMi0wNFQwMDo1ODoyOS4xODNa"
+                      previous:
+                        type: string
+                        example: "KGRhdGUpMjAyMS0wMi0wNFQwMDo1ODoyOS4xODNat"
+        "404":
+          $ref: "#/components/responses/NotFoundError"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+       
+  /proposal/jobProposals:
+    get:
+      tags:
+        - "proposal"
+      parameters:
+        - in: query
+          name: queryParams
+          schema:
+            type: object
+            properties:
+              nextPage:
+                type: string
+              limit:
+                type: integer
+                example: 30
+              proposalStatus:
+                type: integer
+                example: 1
+          style: form
+          explode: true
+      summary: Get all  job proposals aka bids for a given job
+      description: Fetch all bids for a given job, with multiple combinations
+      operationId: getjobproposals
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                job_id: 
+                  type: integer
+                  example: 1
+              required:
+                - job_id
+      responses:
+        "200":
+          description: An object containing the results and the pagInfo obj for cursor pagination for the bids
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  results:
+                    type: array
+                    items:
+                       type: object
+                       properties:
+                        id:
+                          type: integer
+                          example: 1
+                        job_id:
+                          type: integer
+                          example: 1
+                        freelancer_id:
+                          type: integer
+                          example: 1  
+                        client_comment:
+                          type: string
+                          example: ""
+                        freelancer_comment:
+                          type: string
+                          example: ""
+                        freelancer_rating:
+                          type: integer
+                          example: 1
+                        client_rating:
+                          type: number
+                          example: 1
+                        current_proposal_status_id:
+                          type: number
+                          example: 1
+                        created_at:
+                          type: string
+                          example: "2020-05-08T03:11:21.553Z"  
+                        updated_at:
+                          type: string
+                          example: "2020-05-08T03:11:21.553Z"  
+                  pageInfo:
+                    type: object
+                    properties:
+                      total:
+                        type: integer
+                        example: 30
+                      remaining:
+                        type: integer
+                        example: 20
+                      hasMore:
+                        type: boolean
+                        example: true
+                      hasPrevious:
+                        type: boolean
+                        example: true
+                      hasNext:
+                        type: boolean
+                        example: true
+                      next: 
+                        type: string
+                        example: "KGRhdGUpMjAyMS0wMi0wNFQwMDo1ODoyOS4xODNa"
+                      previous:
+                        type: string
+                        example: "KGRhdGUpMjAyMS0wMi0wNFQwMDo1ODoyOS4xODNat"
+        "404":
+          $ref: "#/components/responses/NotFoundError"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+          
+  /proposal/{id}/freelancerFeedback:        
+    patch:
+      tags:
+        - "proposal"
+      parameters:
+        - in: path
+          name: id
+          description: proposal aka bid id
+          required: true
+          example: 1
+          schema:
+            type: integer
+      summary: send a feedback or rating for a job 
+      operationId: freelancerfeedback
+      description: Freelancers can submit a feeback after a job is completed
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                freelancer_comment:
+                  type: string
+                  example: "very bad employer, scam"
+                job_id:
+                  type: integer
+                  example: 1
+                freelancer_rating:
+                  type: integer
+                  example: 1
+              required:
+                - job_id
 
+      responses:
+        "200":
+          description: feedback submitted successfully. The details of the feedback are returned
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+                  job_id:
+                    type: integer
+                    example: 1
+                  freelancer_id:
+                    type: integer
+                    example: 1  
+                  client_comment:
+                    type: string
+                    example: ""
+                  freelancer_comment:
+                    type: string
+                    example: ""
+                  freelancer_rating:
+                    type: integer
+                    example: 1
+                  client_rating:
+                    type: number
+                    example: 1
+                  current_proposal_status_id:
+                    type: number
+                    example: 1
+                  created_at:
+                    type: string
+                    example: "2020-05-08T03:11:21.553Z"  
+                  updated_at:
+                    type: string
+                    example: "2020-05-08T03:11:21.553Z"
+                
+        "404":
+          $ref: "#/components/responses/NotFoundError"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+          
+          
+  /proposal/{id}/clientFeedback:        
+    patch:
+      tags:
+        - "proposal"
+      parameters:
+        - in: path
+          name: id
+          description: proposal aka bid id
+          required: true
+          example: 1
+          schema:
+            type: integer
+      summary: send a feedback or rating for a job 
+      operationId: clientfeedback
+      description: Freelancers can submit a feeback after a job is completed
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                client_comment:
+                  type: string
+                  example: "very bad developer, scam"
+                job_id:
+                  type: integer
+                  example: 1
+                client_rating:
+                  type: integer
+                  example: 1
+              required:
+                - job_id
+
+      responses:
+        "200":
+          description: feedback submitted successfully. The details of the feedback are returned
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+                  job_id:
+                    type: integer
+                    example: 1
+                  freelancer_id:
+                    type: integer
+                    example: 1  
+                  client_comment:
+                    type: string
+                    example: "very bad developer, scam"
+                  freelancer_comment:
+                    type: string
+                    example: ""
+                  freelancer_rating:
+                    type: integer
+                    example: 1
+                  client_rating:
+                    type: number
+                    example: 1
+                  current_proposal_status_id:
+                    type: number
+                    example: 1
+                  created_at:
+                    type: string
+                    example: "2020-05-08T03:11:21.553Z"  
+                  updated_at:
+                    type: string
+                    example: "2020-05-08T03:11:21.553Z"
+                
+        "404":
+          $ref: "#/components/responses/NotFoundError"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"  
+          
+          
+  /proposal/{id}/withdrawProposal:
+    delete:
+      tags:
+        - "proposal"
+      parameters:
+        - in: path
+          name: id
+          description: proposal aka bid id
+          required: true
+          example: 1
+          schema:
+            type: integer  
+      summary: withdraw a job proposal
+      description: Admin users can delete any job, regular users are restricted.
+      operationId: withdrawjobproposal
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: proposal deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+        "404":
+          $ref: "#/components/responses/NotFoundError"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+  
+  
+  /proposal/{id}/rejectProposal:
+    delete:
+      tags:
+        - "proposal"
+      parameters:
+        - in: path
+          name: id
+          description: proposal aka bid id
+          required: true
+          example: 1
+          schema:
+            type: integer  
+      summary: withdraw a job proposal
+      description: Admin users can delete any job, regular users are restricted.
+      operationId: rejectjobproposal
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                job_id:
+                  type: integer
+                  example: 1
+              required:
+                - job_id
+                
+      responses:
+        "200":
+          description: proposal deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+        "404":
+          $ref: "#/components/responses/NotFoundError"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"        
+          
 components:
   securitySchemes:
     bearerAuth:
